# TwinSparkBot

./: .gitignore
twinspark/: .env.example  .gitignore  README.md  mcp-servers.yaml.example  pyproject.toml
twinspark/spec/: MCP客户端集成设计.md  TwinSpark_极简_Agent_重写_d6e3efee.md  dingtalk-ai-card-streaming.md  dingtalk-integration.md  dingtalk-stream-mode.md
twinspark/tests/: test_agent.py  test_agent_tools.py  test_api.py  test_cli.py  test_dingtalk.py  test_dingtalk_card.py  test_dingtalk_stream.py  test_integration.py  test_llm.py  test_mcp_adapter.py  test_mcp_client.py  test_memory.py  test_skills.py  test_tools.py
twinspark/twinspark/: __init__.py  api.py  cli.py  config.py  dingtalk.py  dingtalk_card.py  dingtalk_stream.py
twinspark/twinspark/core/: __init__.py  agent.py  conversation.py  llm.py
twinspark/twinspark/memory/: __init__.py  store.py
twinspark/twinspark/skills/: __init__.py  loader.py  retriever.py
twinspark/twinspark/skills/examples/general/git-commit-message/: SKILL.md
twinspark/twinspark/tools/: __init__.py  base.py  registry.py
twinspark/twinspark/tools/mcp/: __init__.py  adapter.py  client.py  manager.py
