[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "twinspark"
version = "0.1.0"
description = "A minimal, clean agent built on Alibaba Bailian (DashScope) OpenAI-compatible API."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "TwinSpark" }]
keywords = ["agent", "llm", "dashscope", "bailian", "qwen"]
dependencies = [
    "openai>=1.40",
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "pyyaml>=6.0",
    "prompt-toolkit>=3.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "dingtalk-stream>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
twinspark = "twinspark.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["twinspark"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
